--- a/teste/templates/post_show.html
+++ b/teste/templates/post_show.html
@@ -1,6 +1,10 @@
+{% extends 'layout.html' %}
+
+{% block container %}
 <article>
     <h2>{{post.title}}</h2>
     <small>{{post.subtitle}}</small>
     <p>{{post.content}}</p>
     <i>Autor: {{post.user.first_name | add:' ' | add:post.user.last_name}}</i>
 </article>
+{% endblock %}
