--- a/teste/templates/posts_list.html
+++ b/teste/templates/posts_list.html
@@ -1,19 +1,20 @@
-<h1>Listagem de Posts</h1>
-<table>
-    <thead>
-        <tr>
-            <th>Título</th>
-            <th>Subtitulo</th>
-            <th>Conteudo</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for post in posts %}
-        <tr>
-            <td>{{post.title}}</td>
-            <td>{{post.subtitle}}</td>
-            <td>{{post.content}}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% extends 'layout.html' %}
+
+{% block container %}
+    <h1>Listagem de Posts</h1>
+    {% for post in posts %}
+    <div class="card text-center mb-2">
+        <div class="card-header">
+            {{post.title}}
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">{{post.subtitle}}</h5>
+            <p class="card-text">{{post.content}}</p>
+            <a href="/posts/show/{{post.id}}" class="btn btn-primary">Ver Post</a>
+        </div>
+        <div class="card-footer text-muted">
+            2 days ago
+        </div>
+    </div>
+    {% endfor %}
+{% endblock %}
