--- a/teste/templates/layout.html
+++ b/teste/templates/layout.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/posts/list">Lista de Posts</a>
+                    <a class="nav-link" href="{% url 'posts.list' %}">Lista de Posts</a>
                 </li>
             </ul>
         </div>
