--- a/teste/templates/layout.html
+++ b/teste/templates/layout.html
@@ -21,6 +21,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'posts.list' %}">Lista de Posts</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Categorias
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        {% for category in categories %}
+                            <a class="dropdown-item"
+                               href="{% url 'posts.list' %}?category_id={{ category.id }}"
+                            >{{ category.description }}</a>
+                        {% endfor %}
+                    </div>
+                  </li>
             </ul>
         </div>
     </nav>
